# colregs-mcp

./: .gitignore  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: security.yml  test.yml
docs/superpowers/plans/: 2026-06-13-reverse-signal-identification.md  2026-06-14-part-c-completeness.md
docs/superpowers/specs/: 2026-06-13-reverse-signal-identification-design.md  2026-06-14-part-c-completeness-design.md
src/colregs_mcp/: compliance.py  models.py  regime.py  requirements.py  search.py  server.py  sightings.py  tools.py  vault.py
tests/: test_compliance.py  test_models.py  test_real_vault_drift.py  test_regime.py  test_requirements.py  test_search.py  test_server.py  test_sightings.py  test_sightings_drift.py  test_tools.py  test_vault.py
tests/fixtures/vault/: manifest.yaml  regime-polygons.geojson  requirements.yaml  sightings.yaml
tests/fixtures/vault/rules/international/: rule-25.md  rule-30.md
