[project]
name = "colregs-mcp"
version = "0.1.0"
description = "MCP server for the navigation rules: queryable rule text plus deterministic required-lights/shapes and compliance checking."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bryan Clark", email = "clarkbw@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["mcp>=1.27.1", "pyyaml>=6.0.2"]

[project.scripts]
colregs-mcp = "colregs_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
